@@ -1,5 +1,7 @@
 *SVN*
 
+* Add an integration_test generator [Jamis Buck]
+
 * Make all ActionView helpers available in the console from the helper method for debugging purposes. n.b.: Only an 80% solution. Some stuff won't work, most will. [Marcel Molina Jr.]
 
   ex.
